is the template DONE?

--- a/public/games/template.html
+++ b/public/games/template.html
@@ -201,30 +201,30 @@
       if(json.game_1.team1 !== "" ){
         if (Number(json.play_in.score1)>Number(json.play_in.score2)){
           spot1_2.parentElement.style.backgroundColor = "gray"
-          spot1_1.parentElement.style.backgroundColor = "#238652"
+          spot1_1.parentElement.style.backgroundColor = "#36c77b"
         }else{
           spot1_1.parentElement.style.backgroundColor = "gray"
-          spot1_2.parentElement.style.backgroundColor = "#238652"
+          spot1_2.parentElement.style.backgroundColor = "#36c77b"
         }
       }
       //game 1 gray loser
       if(json.game_1.team1 !== "" ){
         if (Number(json.game_1.score1)>Number(json.game_1.score2)){
           spot2_2.parentElement.style.backgroundColor = "gray"
-          spot2_1.parentElement.style.backgroundColor = "#238652"
+          spot2_1.parentElement.style.backgroundColor = "#36c77b"
         }else{
           spot2_1.parentElement.style.backgroundColor = "gray"
-          spot2_2.parentElement.style.backgroundColor = "#238652"
+          spot2_2.parentElement.style.backgroundColor = "#36c77b"
         }
       }
       //game 2 gray loser
       if(json.game_1.team1 !== "" ){
         if (Number(json.game_1.score1)>Number(json.game_1.score2)){
           spot2_4.parentElement.style.backgroundColor = "gray"
-          spot2_3.parentElement.style.backgroundColor = "#238652"
+          spot2_3.parentElement.style.backgroundColor = "#36c77b"
         }else{
           spot2_3.parentElement.style.backgroundColor = "gray"
-          spot2_4.parentElement.style.backgroundColor = "#238652"
+          spot2_4.parentElement.style.backgroundColor = "#36c77b"
         }
       }
   }
