third place color bug

--- a/public/games/template.html
+++ b/public/games/template.html
@@ -188,13 +188,14 @@
           spot3_1.parentElement.style.backgroundColor=("silver");
         }
       }
+      //change style for third place
       if (json.third !== ""){
         if (json.third == json.third_place.team1){
           spot3_3.parentElement.style.backgroundColor=("#CD7F32");
           spot3_4.parentElement.style.backgroundColor="gray";
         }else{
           spot3_4.parentElement.style.backgroundColor=("#CD7F32");
-          spot3_4.parentElement.style.backgroundColor="gray";
+          spot3_3.parentElement.style.backgroundColor="gray";
         }
       }
       //play in gray loser
