--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p class="intro" id="intro">Kittler</p>
             <h1 id="headline">Olympics</h1>
             <p class="year">
-                <i class="fa fa-star"></i>2023<i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>2024<i class="fa fa-star"></i>
             </p>
-            <p>Sponsored by Bud Light and Tums</p>
+            <p>Sponsored by Family and Lotto Tickets</p>
         </div>
     </header>
     <div class="button-container ">
